<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="feed"
            type="com.example.feedapplegame.model.Feed" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/_48dp"
    android:layout_marginEnd="@dimen/_48dp"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/tvStageHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{String.format(@string/stage, feed.stage)}"
        style="@style/title"
        tools:text="@string/stage"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTotalAppleEaten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{String.format(@string/total_apple_eaten, feed.appleCount)}"
        tools:text="@string/total_apple_eaten"
        style="@style/sub_title"
        android:layout_marginTop="@dimen/_3dp"
        app:layout_constraintTop_toBottomOf="@+id/tvStageHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivDinoContainer"
        android:layout_width="264dp"
        android:layout_height="282dp"
        android:padding="@dimen/_10dp"
        android:src="@drawable/ic_stage_one_dino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_49dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalAppleEaten"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvMeetDino"
        style="@style/bold_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meet_dyno_your_new_pet"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginStart="@dimen/_89dp"
        android:layout_marginEnd="@dimen/_89dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDinoContainer" />
    <TextView
        android:id="@+id/tvYouNeed"
        style="@style/text_you_need"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_need"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_32dp"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMeetDino" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llButtonContainer"
        style="@style/text_you_need"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/button_background"
        android:padding="@dimen/_10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvYouNeed">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/apple_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvFeedApple"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFeedApple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_apple"
            android:layout_marginStart="@dimen/_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
             />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llButtonPlayContainer"
        style="@style/text_you_need"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:visibility="gone"
        android:background="@drawable/button_background_dark"
        android:padding="@dimen/_10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvYouNeed">

        <ImageView
            android:id="@+id/ivConsole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/video_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvPlayAgain"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPlayAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_again"
            android:layout_marginStart="@dimen/_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivConsole"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>